# containerfile-parse

./: README.md  pyproject.toml
src/containerfile_parse/: cli.py  containerfile.py
test/fixtures/: Containerfile.simple
