[tool.poetry]
name = "containerfile-parse"
version = "0.1.0"
description = "Parse containerfiles"
authors = ["odra <me@lrossetti.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include="containerfile_parse", from="src" },
]

[tool.poetry.scripts]
containerfile-parse = "containerfile_parse.cli:run"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
dockerfile-parse = "^2.0.1"
canonicaljson = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
